--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -5,11 +5,7 @@
     <h1><%= t ".header" %></h1>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= render "form" %>
-        <div class="gravatar_edit">
-          <%= gravatar_for @user %>
-          <%= link_to t("change"), "http://gravatar.com/emails", target: "_blank" %>
-        </div>
+        <%= render "shared/request_form" %>
       </div>
     </div>
   </div>
