--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,31 @@
-<div class="center jumbotron">
-  <h1><%= t ".header" %></h1>
-  <h2>
-    <%= t ".contain1" %>
-    <%= link_to t(".contain2"), "http://www.railstutorial.org/" %>
-    <%= t ".contain3" %>
-  </h2>
-  <%= link_to t(".signupnow"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% provide :button_text, t(".submit") %>
+<% if logged_in? %>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <div class="row">
+        <aside class="col-md-4">
+          <section class="user_info">
+            <%= render "shared/user_info" %>
+          </section>
+          <section class="request_form">
+            <%= render "shared/request_form" %>
+          </section>
+        </aside>
+        <div class="col-md-8">
+          <h3><%= t ".request" %></h3>
+          <%= render "shared/request_feed" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t ".header" %></h1>
+    <h2>
+      <%= t ".contain1" %>
+      <%= link_to t(".contain2"), "http://www.railstutorial.org/" %>
+      <%= t ".contain3" %>
+    </h2>
+    <%= link_to t(".login"), login_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
