--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,15 @@
 <% provide :title, @user.name %>
 <div class="panel panel-default">
   <div class="panel-body">
-    <h1>
-      <%= gravatar_for @user %>
-      <%= @user.name %>
-    </h1>
+    <div class="row">
+      <aside class="col-md-4">
+        <section class="user_info">
+          <h1>
+            <%= gravatar_for @user %>
+            <%= @user.name %>
+          </h1>
+        </section>
+      </aside>
+    </div>
   </div>
 </div>
