--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,9 @@
           <li><%= link_to t(".user"), users_path %></li>
           <li><%= link_to t(".divisions"), divisions_path %></li>
           <li><%= link_to t(".positions"), positions_path %></li>
+          <% if current_user.manager? %>
+            <li><a href=<%= status_user_path(current_user) %>><%= t ".request" %> <span class="badge"><%= current_user.request_pending.size %></span></a></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %> <b class="caret"></b>
