--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,12 +10,15 @@
           <section class="stats">
             <%= render "shared/stats" %>
           </section>
-          <section class="request_form">
-            <%= render "shared/request_form" %>
-          </section>
+          <% if current_user.user? %>
+            <section class="request_form">
+              <%= render "shared/request_form" %>
+            </section>
+          <% end %>
         </aside>
         <div class="col-md-8">
           <h3><%= t ".request" %></h3>
+          <%= render "shared/search" %>
           <%= render "shared/request_feed" %>
         </div>
       </div>
