--- a/app/views/users/edit_division.html.erb
+++ b/app/views/users/edit_division.html.erb
@@ -1,13 +1,16 @@
 <% provide :title, t(".title") %>
 <% provide :button_text, t(".submit") %>
-<h1><%= t ".header" %></h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user do |f| %>
-      <%= f.label t "division" %>
-      <%= f.collection_select :division_id, @division, :id, :name, {prompt: true}, {class: "form-control"} %>
-      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-    <% end %>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h1><%= t ".header" %></h1>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= form_for @user do |f| %>
+          <%= f.label t "division" %>
+          <%= f.collection_select :division_id, @division, :id, :name, {prompt: true}, {class: "form-control"} %>
+          <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
