--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,10 @@
             <%= gravatar_for @user %>
             <%= @user.name %>
           </h1>
+          <span><%= link_to t(".view"), info_user_path %></span>
+        </section>
+        <section class="stats">
+          <%= render "shared/stats" %>
         </section>
         <section class="stats">
           <%= render "shared/stats" %>
