--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,20 @@
             <%= @user.name %>
           </h1>
         </section>
+        <section class="stats">
+          <%= render "shared/stats" %>
+        </section>
       </aside>
+      <div class="col-md-8">
+        <%= render "follow_form" if logged_in? %>
+        <% if @user.requests.any? %>
+          <h3><%= t(".request", size: @user.requests.size) %></h3>
+          <ol class="requests">
+            <%= render @requests %>
+          </ol>
+          <%= will_paginate @requests %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
