--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,2 +1,14 @@
 <%= provide :title, @division.name %>
-<%= @division.name %>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="row">
+      <aside class="col-md-4">
+        <section class="user_info">
+          <h1>
+            <%= @division.name %>
+          </h1>
+        </section>
+      </aside>
+    </div>
+  </div>
+</div>
