--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,6 +7,9 @@
           <section class="user_info">
             <%= render "shared/user_info" %>
           </section>
+          <section class="stats">
+            <%= render "shared/stats" %>
+          </section>
           <section class="request_form">
             <%= render "shared/request_form" %>
           </section>
