Add log in/ log out

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,5 +5,5 @@
     <%= link_to t(".contain2"), "http://www.railstutorial.org/" %>
     <%= t ".contain3" %>
   </h2>
-  <%= link_to t(".signupnow"), "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".signupnow"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
