--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,8 +8,25 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(".home"), root_path %></li>
         <li><%= link_to t(".help"), help_path %></li>
-        <button type="button" class="btn btn-default navbar-btn">
-          <%= link_to t(".login"), "#", class:"linkfix"%></button>
+        <% if logged_in? %>
+          <li><%= link_to t(".user"), users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t ".account" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".profile"), current_user %></li>
+              <li><%= link_to t(".setting"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <button type="button" class="btn btn-default navbar-btn">
+          <%= link_to t(".login"), login_path, class:"linkfix"%></button>
+        <% end %>
       </ul>
     </nav>
   </div>
