--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,12 @@
 <% provide :title, t(".title") %>
 <% provide :button_text, t(".submit") %>
-<h1><%= t ".title" %></h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render "form" %>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <h1><%= t ".title" %></h1>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= render "form" %>
+      </div>
+    </div>
   </div>
 </div>
