--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,10 @@
         <li><%= link_to t(".home"), root_path %></li>
         <li><%= link_to t(".help"), help_path %></li>
         <% if logged_in? %>
+          <% if current_user.admin? %>
+            <li><%= link_to t(".create_division"), new_division_path %></li>
+            <li><%= link_to t(".create_position"), new_position_path %></li>
+          <% end %>
           <li><%= link_to t(".user"), users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
