Ini edit, fix create user
Now only admin user can create new user

--- a/app/views/positions/_position.html.erb
+++ b/app/views/positions/_position.html.erb
@@ -1,3 +1,6 @@
 <li>
   <%= link_to position.name, position %>
+   <% if current_user.admin? %>
+    | <%= link_to t("edit"), edit_position_path(position) %>
+  <% end %>
 </li>
