--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -5,14 +5,7 @@
     <h1><%= t ".title" %></h1>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <%= form_for @position do |f| %>
-          <%= render "shared/error_messages", object: f.object %>
-
-          <%= f.label t "name" %>
-          <%= f.text_field :name, class: "form-control" %>
-
-          <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-        <% end %>
+        <%= render "form" %>
       </div>
     </div>
   </div>
