--- a/app/views/divisions/_division.html.erb
+++ b/app/views/divisions/_division.html.erb
@@ -1,3 +1,6 @@
 <li>
   <%= link_to division.name, division %>
+  <% if current_user.admin? %>
+    | <%= link_to t("edit"), edit_division_path(division)%>
+  <% end %>
 </li>
