--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,20 @@
         <li><%= link_to t(".help"), help_path %></li>
         <% if logged_in? %>
           <% if current_user.admin? %>
-            <li><%= link_to t(".create_division"), new_division_path %></li>
-            <li><%= link_to t(".create_position"), new_position_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t "ultility" %> <b class="caret"></b>
+              </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".create_division"), new_division_path %></li>
+              <li><%= link_to t(".create_position"), new_position_path %></li>
+              <li><%= link_to t(".create_user"), signup_path %></li>
+            </ul>
+            </li>
           <% end %>
           <li><%= link_to t(".user"), users_path %></li>
+          <li><%= link_to t(".divisions"), divisions_path %></li>
+          <li><%= link_to t(".positions"), positions_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %> <b class="caret"></b>
