--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,12 +13,13 @@
   <%= f.label t "user_code" %>
   <%= f.text_field :user_code, class: "form-control" %>
 
-  <%= f.label t "division" %>
-  <%= f.collection_select :division_id, @division, :id, :name, {prompt: true}, {class: "form-control"} %>
+  <% unless user_exists? @user %>
+    <%= f.label t "division" %>
+    <%= f.collection_select :division_id, @division, :id, :name, {prompt: true}, {class: "form-control"} %>
 
-  <%= f.label t "position" %>
-  <%= f.collection_select :position_id, @position, :id, :name, {prompt: true}, {class: "form-control"} %>
-
+    <%= f.label t "position" %>
+    <%= f.collection_select :position_id, @position, :id, :name, {prompt: true}, {class: "form-control"} %>
+  <% end %>
   <%= f.label t "password" %>
   <%= f.password_field :password, class: "form-control" %>
 
