--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,19 @@
 <% provide :title, t(".title") %>
-<div class="panel panel-default">
-  <div class="panel-body">
-    <div class="page-header">
-      <h1><%= t ".title" %></h1>
-    </div>
-    <%= will_paginate %>
-    <ul class="users">
-      <%= render @users %>
-    </ul>
-    <%= will_paginate %>
-  </div>
+<h1><%= t ".title" %></h1>
+<% if is_manager_admin? current_user %>
+<div>
+<%= form_for :search, method: :get do |f| %>
+  <%= f.select :filter,
+    options_from_collection_for_select(@filter =
+      {by_user_name: t("name"), by_user_code: t("user_code")}, :first, :last),
+        {class: "form-control" } %>
+  <%= f.text_field :keyword, class: "form-control" %>
+  <%= f.submit t("search"), class: "btn btn-primary"%>
+<% end %>
 </div>
+<% end %>
+<%= will_paginate %>
+<ul class="users">
+  <%= render @users %>
+</ul>
+<%= will_paginate %>
